--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,33 +1,12 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,100|Roboto+Condensed:700,400);
 
-$icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
-$font-family-base: "Roboto";
-$font-size-base: 16px;
-$line-height-base: 1.5;
-$font-size-h1: 36px;
-$font-size-h2: 20px;
-
-$headings-font-family: "Roboto Condensed";
-/* $headings-font-weight; */
-/* $headings-line-height; */
-$body-bg: #282828;
-$btn-primary-bg: rgba(255, 255, 255, 0.6);
-$btn-primary-color: #3c899d;
-$panel-bg: rgba(255, 255, 255, 0.6);
-$navbar-height: 156px;
-$navbar-margin-bottom: 0;
-
-$primary-color: #1a5128;
-
-$text-color: $primary-color;
-$headings-small-color: $primary-color;
-$navbar-default-link-color: $primary-color;
-$navbar-default-link-active-color: $primary-color;
-
+@import "_variables";
 
 // bower:scss
 @import "bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 // endbower
+
+@import "_navbar";
 
 .browsehappy {
   margin: 0.2em 0;
@@ -35,53 +14,6 @@ $navbar-default-link-active-color: $primary-color;
   color: #000;
   padding: 0.2em 0;
 }
-
-.navbar-brand {
-  padding: (($navbar-height - 97px) / 2) 36px;
-}
-
-
-.navbar-nav > li > a {
-    line-height: 30px;
-    font-size: 20px;
-
-    @media (max-width: $screen-sm-max) {
-      font-size: 16px;
-    }
-
-    font-family: 'Roboto Condensed';
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 0.12em;
-
-    @media (min-width: $screen-md-min) {
-      padding-left: 30px;
-      padding-right: 30px;
-    }
-
-    @media (min-width: $screen-lg-min) {
-      padding-left: 40px;
-      padding-right: 40px;
-    }
-
-    padding-top: ($navbar-height - 69);
-    padding-bottom: 39px;
-    /* .navbar-nav > li > a  { $navbar-padding-vertical } */
-  }
-
-  .si-square {
-    background-color: $primary-color;
-    color: #FFF;
-    font-size: 20px;
-
-    @media (max-width: $screen-sm-max) {
-      font-size: 16px;
-      padding: 2px;
-    }
-
-
-    padding: 4px;
-  }
 
 .content-section {
   padding-top: 150px;
