--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,7 +16,7 @@
 }
 
 .content-section {
-  padding-top: 150px;
+  padding-top: 70px;
   padding-bottom: 200px;
 
   @media (max-width: $screen-sm-min) {
@@ -48,6 +48,11 @@ body {
   padding-left: 2em;
 }
 
+.text-indented {
+  margin-left: 1em;
+  text-indent: -1em;
+}
+
 figure {
      position: relative;
 }
@@ -59,4 +64,119 @@ figcaption {
     bottom: 34px;
     left: 20px;
     right: 0;
+}
+
+.col-centered-auto {
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media (max-width: $screen-xs-max) {
+    display: block;
+  }
+
+}
+
+hr {
+}
+
+ul.facts {
+  list-style: none;
+  list-style-type: none;
+  padding: 0;
+  margin: 0 auto;
+  width: 80%;
+
+  @media (min-width: $screen-md-min) {
+    margin-top: 100px;
+  }
+
+}
+
+li.line {
+  margin-left: -2em;
+  border-top: 6px solid #c9d7c5;
+  border-radius: 3px;
+  width: 50%;
+}
+
+.fact-number {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.globe {
+  background: url(../images/globe.png) no-repeat right center;
+  height: 162px;
+  padding-top: 80px;
+  padding-right: 30px;
+
+    .fact-number {
+      font-size: 40px;
+    }
+
+    @media (min-width: $screen-md-min) {
+      margin-top: 100px;
+    }
+}
+
+.cap {
+  background: url(../images/cap.png) no-repeat left top;
+  height: 162px;
+  padding-top: 50px;
+  padding-left: 20px;
+
+    .fact-number {
+      font-size: 40px;
+    }
+
+    @media (min-width: $screen-md-min) {
+      margin-top: 70px;
+    }
+
+
+}
+
+.generations {
+  background: url(../images/curvedarrow.png) no-repeat left top;
+  height: 162px;
+  padding-top: 20px;
+  padding-left: 40px;
+
+    .fact-number {
+      font-size: 40px;
+    }
+}
+
+.locations {
+  background: url(../images/locations.png) no-repeat left top;
+  min-height: 231px;
+  padding-top: 120px;
+  padding-left: 80px;
+
+    .fact-number {
+      font-size: 40px;
+    }
+
+    @media (max-width: $screen-xs-max) {
+      padding-top: 231px;
+      padding-left: 0;
+    }
+}
+
+.storage {
+  background: url(../images/storage.png) no-repeat center bottom;
+  padding-bottom: 40px;
+  width: 217px;
+    .fact-number {
+      font-size: 40px;
+    }
+}
+
+.fact {
+  margin-top: 50px;
+}
+
+.nav > li > a:hover {
+  text-decoration:underline;
 }
