--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -187,6 +187,18 @@ li.line {
   margin-top: 50px;
 }
 
+.fbhint {
+  margin-top: 46px;
+}
+
+.management {
+  margin-top: 16px;
+}
+
+.marginBottom30 {
+  margin-bottom: 30px;
+}
+
 .nav > li > a:hover {
   text-decoration:underline;
 }
